<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search_menuitem"
        android:icon="@drawable/ic_search_24dp"
        android:title="@string/search_title"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />
    <item
        android:id="@+id/settings_menuitem"
        android:title="@string/settings_menuitem"
        app:showAsAction="never" />
    <item
        android:id="@+id/export_menuitem"
        android:title="@string/export_menuitem"
        app:showAsAction="never" />
    <item
        android:id="@+id/import_menuitem"
        android:title="@string/import_menuitem"
        app:showAsAction="never" />
    <item
        android:id="@+id/about_menuitem"
        android:title="@string/about"
        app:showAsAction="never" />
</menu>
